# polly

./: .gitignore  CMakeLists.txt
cmake/: CMakeLists.txt  FindGmp.cmake  FindIsl.cmake  PollyConfig.cmake.in
include/polly/: Accesses.h  CMakeLists.txt  DeLICM.h  DependenceInfo.h  DumpDebugPass.h  DumpModulePass.h  FieldAccess.h  ForwardOpTree.h  LinkAllPasses.h  MayAliasSet.h  MollyBackref.h  MollyFieldAccess.h  MollyMeta.h  PollyContextPass.h  PruneUnprofitable.h  RegisterPasses.h  ScopBuilder.h  ScopDetection.h  ScopInfo.h  ScopInfo.h.orig  ScopMemory.h  Simplify.h  TempScopInfo.h  ZoneAlgo.h
include/polly/CodeGen/: BlockGenerators.h  CodeGeneration.h  CodegenCleanup.h  IslAst.h  RuntimeDebugBuilder.h
include/polly/Consecutivity/: consecutivity.h  util.h
include/polly/Support/: DumpScopPass.h  GICHelper.h  ISLTools.h  PrintScopPass.h  SCEVAffinator.h  ScopHelper.h  VirtualInstruction.h
lib/: CMakeLists.txt  CodePreparation.cpp  DeadCodeElimination.cpp  FieldAccess.cpp  IndVarSimplify.cpp  IndependentBlocks.cpp  MollyFieldAccess.cpp  MollyMeta.cpp  PollyContextPass.cpp  RegisterPasses.cpp  ScheduleOptimizer.cpp
lib/Analysis/: Accesses.cpp  CMakeLists.txt  DependenceInfo.cpp  Dependences.cpp  FieldAccess.cpp  PolyhedralInfo.cpp  PruneUnprofitable.cpp  ScopBuilder.cpp  ScopDetection.cpp  ScopInfo.cpp  ScopInfo.cpp.orig  ScopMemory.cpp  TempScopInfo.cpp
lib/CodeGen/: BlockGenerators.cpp  CMakeLists.txt  Cloog.cpp  CodeGeneration.cpp  CodegenCleanup.cpp  IslAst.cpp  IslCodeGeneration.cpp  IslExprBuilder.cpp  IslNodeBuilder.cpp  LoopGenerators.cpp  PTXGenerator.cpp  RuntimeDebugBuilder.cpp
lib/Consecutivity/: consecutivity.c  util.c
lib/Exchange/: CMakeLists.txt  JSONExporter.cpp
lib/JSON/: json_value.cpp
lib/Support/: CMakeLists.txt  DumpDebugPass.cpp  DumpModulePass.cpp  DumpScopPass.cpp  GICHelper.cpp  ISLTools.cpp  PrintScopPass.cpp  RegisterPasses.cpp  SCEVValidator.cpp  ScopHelper.cpp  VirtualInstruction.cpp  VirtualInstruction.cpp.orig
lib/Transform/: CodePreparation.cpp  DeLICM.cpp  DeLICM.cpp.orig  ForwardOpTree.cpp  IndependentBlocks.cpp  ScheduleOptimizer.cpp  Simplify.cpp  ZoneAlgo.cpp
test/: CMakeLists.txt  abc.c  abc.ll  abc_0.ll  abc_1.ll  block.ll  cholesky-72cde1.c  cholesky-72cde1.ll  correlation-021bfd.c  correlation-021bfd.ll  covariance-76669c.c  covariance-76669c.ll  durbin-aac882.c  durbin-aac882.ll  durbin.ll  huihui3.ll  ludcmp-93306f.c  ludcmp-93306f.ll  oggenc.ll  oourafft.ll  reg_detect.ll  seidel-2d.c  seidel-2d.ll  semeai.c  semeai.ll  semeai_0.ll  semeai_1.ll  trisolv-b6de25.c  trisolv-b6de25.ll  trisolv-fa25a0.ll  update_check.py  update_failing.py
test/DeLICM/: block.ll  block0.ll  compute.ll  correlation.ll  delicm_GVN.ll  delicm_LICM_cond.ll  delicm_LICM_conditional_reductions.ll  delicm_LICM_consecutive_reductions.ll  delicm_LICM_loads.ll  delicm_LICM_nested_reductions.ll  delicm_LICM_nonaffine.ll  delicm_LICM_reduction.ll  delicm_LICM_split.ll  delicm_LICM_two_reductions.ll  delicm_LICM_writes.ll  delicm_base.ll  doubleacc.ll  fasta.ll  gcc-loops.ll  gemm-before.ll  gemm.ll  gemm_complete.ll  incomplete_phi.ll  libclamav_autoit.ll  licm_potential_store.ll  licm_reduction_nested.ll  licm_store.ll  loadhoist_embedded.ll  macroblock0.ll  oggenc.ll  oopack_v1p8.ll  reduction.ll  reduction_embedded.ll  reduction_embedded2.ll  stepanov_container.ll  transform8x8.ll  tsc.ll  tsc0.ll
test/ForwardOpTree/: dead_access_load.ll  forward_instruction.ll
test/Isl/CodeGen/: doubleacc.ll
test/Known/: basecase_embedded.ll  virtualtree_embedded.ll
test/PrintScop/: analyze.ll  print.ll
test/ScheduleOptimizer/: mat_mul_pattern_data_layout.ll
test/ScopInfo/: delicm_GVN.ll  delicm_LICM_cond.ll  delicm_LICM_conditional_reductions.ll  delicm_LICM_consecutive_reductions.ll  delicm_LICM_loads.ll  delicm_LICM_nested_reductions.ll  delicm_LICM_nonaffine.ll  delicm_LICM_reduction.ll  delicm_LICM_split.ll  delicm_LICM_two_reductions.ll  delicm_LICM_writes.ll  delicm_base.ll  licm_reduction.ll  multidim_2d_with_modref_call.ll  multidim_2d_with_modref_call_2.ll  multidim_fortran_2d_with_modref_call.ll  pointer-used-as-base-pointer-and-scalar-read.ll  ranged_parameter_2.ll  same-base-address-scalar-and-array.ll  scalar_to_array.ll  variant_base_pointer.ll
test/ScopInfo/NonAffine/: non_affine_loop_used_later.ll
test/Simplify/: basecase_embedded.ll  dead_access_load.ll  dead_access_phi.ll  dead_access_value.ll  gemm.ll  identical.ll  identical_3phi.ll  overwritten.ll  overwritten_3phi.ll  overwritten_3store.ll  overwritten_implicit_and_explicit.ll  overwritten_scalar.ll  pr33323.ll  redundant.ll  redundant_storebetween.ll
tools/: CMakeLists.txt
tools/pollycc/: CMakeLists.txt  cc1_main.cpp  cc1as_main.cpp  driver.cpp
unittests/: CMakeLists.txt
unittests/DeLICM/: DeLICMTest.cpp
utils/: runtimedebugging-compile-obsqui.sh
